# lithium.rip

./: README.md
Lithium Lite (latest)/Lithium Lite 2.0 (no auth)/: CMakeLists.txt  README.md  main.cpp  main.h  xorstr.h
Lithium Lite (latest)/Lithium Lite 2.0 (no auth)/imgui/: imgui.h  imgui_impl_win32.h
Lithium Lite (latest)/Lithium Lite 2.0 (no auth)/modules/combat/: reach.cpp  throwpot.cpp
Lithium Lite (latest)/Lithium Lite 2.0 (no auth)/modules/destruct/: destruct.cpp
Lithium Lite (latest)/Lithium Lite 2.0 (no auth)/modules/movement/: antiafk.cpp  bhop.cpp  timer.cpp
Lithium Lite (latest)/Lithium Lite 2.0 (no auth)/modules/visuals/: nametags.cpp
Lithium Lite (latest)/Lithium Lite 2.0 (with auth)/: CMakeLists.txt  main.h  ntdll.h
Lithium Lite 2.0/: Lithium Lite 2.0.sln  auth.cpp  binds.cpp  clicker.cpp  destruct.cpp  esp.cpp  fly.cpp  md5.h  roboto.h  speed.cpp  status.cpp  xorstr.h
Lithium Lite 2.0 (OLD)/: main.cpp
Lithium Lite 2.0 (OLD)/imgui/: imgui_widgets.cpp
Lithium Lite 2.0 (OLD)/misc/: binds.cpp  tools.cpp
Lithium Lite 2.0 (OLD)/modules/: clicker.cpp  destruct.cpp  reach.cpp  throwpot.cpp
Lithium Lite 2.0 (no auth)/: CMakeLists.txt  main.cpp
Lithium Lite 2.0 (no auth)/Lithium Lite 2.0/: bhop.cpp  imconfig.h  imgui_draw.cpp  imgui_impl_dx11.cpp  imgui_impl_dx11.h  imgui_impl_win32.cpp  imgui_tables.cpp  json.h  main.cpp  md5.cpp  nametags.cpp  scanner.cpp  sha256.h  sha512.cpp  sha512.h  throwpot.cpp  timer.cpp  velocity.cpp
Lithium Lite 2.0 (no auth)/imgui/: imgui.cpp  (+5 more)
Lithium Lite 2.0 (with auth)/: main.cpp
Lithium Lite OLD (no auth)/: auth.cpp  lith-lite.sln  lith-lite.vcxproj  lith-lite.vcxproj.filters
lithium.rip website/: index.html  styles.css
(+64 files in other folders)
